frontend/test/should_pass/exectype_VReset.grg
using exectype;

rule r
{
	modify  {
		exec(i:int=1 ;> {vreset(i)});
	}
}