frontend/test/should_fail/exectype_VReset.grg
using exectype;

rule r
{
	modify  {
		exec(i:string="hurz!" ;> {vreset(i)});
	}
}